--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 </main>
 
   <script src="scroll.js"></script>
+  <script src="detect-scroll.js"></script>
   <script src="script.js"></script>
   <script src="fixtures.js"></script>
   <script src="last-year-stats.js"></script>
