making some responsive changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,32 @@
     </nav>
   </header>
 
+  <header class="mobile-navbar">
+    <!-- Hamburger Menu Icon -->
+    <button id="mobile-menu-button">
+      ☰
+  </button>
+    <div class="mobile-menu">
+      <button id="close-menu">
+        ✖
+      </button>
+      <nav id="navigation-scrolling">
+        <ul>
+            <li><a href="#mobile-home">Home</a></li>
+            <li><a href="#games">Games</a></li>
+            <li><a href="#team">The Squad</a></li>
+            <li><a href="#standings">Standings</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
   <main>
+
+    <div class="content" id="mobile-home">
+      <h1 id="screen-title">Welcome Pistons Fan</h1>
+      <h2>To your source for the latest Pistons news, game fixtures, and player stats.</h2>
+    </div>
 
     <div class="content" id="home">
       <h1 id="screen-title">Welcome Pistons Fan</h1>
