finished mobile navigation

--- a/index.html
+++ b/index.html
@@ -23,12 +23,9 @@
   <header class="mobile-navbar">
     <!-- Hamburger Menu Icon -->
     <button id="mobile-menu-button">
-      ☰
-  </button>
+      
+    </button>
     <div class="mobile-menu">
-      <button id="close-menu">
-        ✖
-      </button>
       <nav id="navigation-scrolling">
         <ul>
             <li><a href="#mobile-home">Home</a></li>
@@ -37,6 +34,9 @@
             <li><a href="#standings">Standings</a></li>
         </ul>
       </nav>
+      <button id="close-menu">
+        ✖
+      </button>
     </div>
   </header>
 
@@ -272,6 +272,7 @@
   <script src="fixtures.js"></script>
   <script src="last-year-stats.js"></script>
   <script src="standings.js"></script>
+  <script src="menu.js"></script>
 
 </body>
 </html>
