--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header class="navbar">
     <nav id="navigation-scrolling">
         <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">Games</a></li>
             <li><a href="#team">The Squad</a></li>
             <li><a href="#standings">Standings</a></li>
             <li><a href="#contacts">313</a></li>
@@ -41,6 +41,9 @@
   </header>
 
   <main>
+
+    <div class="content" id="landing">
+    </div>
 
     <div class="content" id="mobile-home">
       <h1 id="screen-title">Welcome Pistons Fan</h1>
