--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
   <main>
 
     <div class="content" id="landing">
+      <section>
+        <div class="side" id="side1">
+          <img src="assets/cade-all-star.jpg">
+        </div>
+        <div class="side" id="side2">
+          <img src="assets/cade-all-star.jpg">
+        </div>
+      </section>
     </div>
 
     <div class="content" id="mobile-home">
@@ -345,6 +353,7 @@
   <script src="menu.js"></script>
   <script src="player-swipe.js"></script>
   <script src="games-mobile.js"></script>
+  <script src="landing.js"></script>
 
 
 </body>
