added dynamic background divs for scroll effect

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="responsive.css">
 </head>
-<body>
 
+<div id="landing">
+  <section>
+    <div class="side" id="side1">
+      <img src="assets/cade-all-star.jpg">
+    </div>
+    <div class="side" id="side2">
+      <img src="assets/cade-all-star.jpg">
+    </div>
+  </section>
+</div>
+
+
+<body>
+<div id="spacer1"></div>
+<div id="spacer2"></div>
   <header class="navbar">
     <nav id="navigation-scrolling">
         <ul>
@@ -41,17 +55,6 @@
   </header>
 
   <main>
-
-    <div class="content" id="landing">
-      <section>
-        <div class="side" id="side1">
-          <img src="assets/cade-all-star.jpg">
-        </div>
-        <div class="side" id="side2">
-          <img src="assets/cade-all-star.jpg">
-        </div>
-      </section>
-    </div>
 
     <div class="content" id="mobile-home">
       <h1 id="screen-title">Welcome Pistons Fan</h1>
