added current player stats and python functionality to fetch

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <p>FT%: <span id="overlay-ftp"></span></p>
           </div>
           <div class="overlay-right">
-            <img />
+            <img id="overlay-player-image" />
             <button class="close-btn" onclick="closeOverlay()">✖</button>
           </div>
         </div>
@@ -351,12 +351,13 @@
   <script src="detect-scroll.js"></script>
   <script src="script.js"></script>
   <script src="fixtures.js"></script>
-  <script src="last-year-stats.js"></script>
+  <!-- <script src="last-year-stats.js"></script> -->
   <script src="standings.js"></script>
   <script src="menu.js"></script>
   <script src="player-swipe.js"></script>
   <script src="games-mobile.js"></script>
   <script src="landing.js"></script>
+  <script src="stats.js"></script>
 
 
 </body>
