added draft section and content

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="#home">Games</a></li>
             <li><a href="#team">The Squad</a></li>
             <li><a href="#standings">Standings</a></li>
+            <li><a href="#draft">'25 Draft</a></li>
             <li><a href="#contacts">313</a></li>
         </ul>
     </nav>
@@ -271,6 +272,127 @@
   </div>
 </div><!-- end of standings screen -->
 
+<div class="content" id="draft">
+  <h1 id="screen-title">'25 Mock Draft</h1>
+
+  <div class="draft-grid">
+
+    <!-- First Pick Column -->
+    <div class="pick-column first">
+      <h2 id="draft-pick-1"></h2>
+      <div id="suggestions-1" class="suggestions-column">
+
+        <!-- Suggestion 1 -->
+        <div class="player-card" id="rasheer">
+          <div class="player-image">
+            <img src="assets/draft/rasheer-fleming.png" alt="Player Headshot">
+          </div>
+          <div class="player-info">
+            <h3>Rasheer Fleming</h3>
+            <table>
+              <tr><td>20</td></tr>
+              <tr><td>PF</td></tr>
+              <tr><td>St. Joseph's</td></tr>
+              <tr><td>6'9"</td></tr>
+            </table>
+          </div>
+        </div>
+
+        <!-- Suggestion 2 -->
+        <div class="player-card" id="hugo">
+          <div class="player-image">
+            <img src="assets/draft/hugo-gonzalez.png" alt="Player Headshot">
+          </div>
+          <div class="player-info">
+            <h3>Hugo Gonzalez</h3>
+            <table>
+              <tr><td>19</td></tr>
+              <tr><td>SG</td></tr>
+              <tr><td>Real Madrid</td></tr>
+              <tr><td>6'6"</td></tr>
+            </table>
+          </div>
+        </div>
+
+           <!-- Suggestion 3 -->
+           <div class="player-card" id="asa">
+            <div class="player-image">
+              <img src="assets/draft/asa-newell.png" alt="Player Headshot">
+            </div>
+            <div class="player-info">
+              <h3>Asa Newell</h3>
+              <table>
+                <tr><td>19</td></tr>
+                <tr><td>PF</td></tr>
+                <tr><td>Georgia</td></tr>
+                <tr><td>6'10"</td></tr>
+              </table>
+            </div>
+          </div>
+
+      </div>
+    </div>
+
+    <!-- Second Pick Column -->
+    <div class="pick-column second">
+      <h2 id="draft-pick-2"></h2>
+      <div id="suggestions-2" class="suggestions-column">
+
+        <!-- Suggestion 1 -->
+        <div class="player-card" id="ivisic">
+          <div class="player-image">
+            <img src="assets/draft/tomislav-ivisic.png" alt="Player Headshot">
+          </div>
+          <div class="player-info">
+            <h3>Tomislav Ivisic</h3>
+            <table>
+              <tr><td>21</td></tr>
+              <tr><td>PF/C</td></tr>
+              <tr><td>Illinois</td></tr>
+              <tr><td>7'1"</td></tr>
+            </table>
+          </div>
+        </div>
+
+        <!-- Suggestion 2 -->
+        <div class="player-card" id="wolf">
+          <div class="player-image">
+            <img src="assets/draft/danny-wolf.png" alt="Player Headshot">
+          </div>
+          <div class="player-info">
+            <h3>Danny Wolf</h3>
+            <table>
+              <tr><td>20</td></tr>
+              <tr><td>PF/C</td></tr>
+              <tr><td>Michigan</td></tr>
+              <tr><td>7'0"</td></tr>
+            </table>
+          </div>
+        </div>
+
+        <!-- Suggestion 3 -->
+        <div class="player-card" id="boogie">
+          <div class="player-image">
+            <img src="assets/draft/boogie-fland.png" alt="Player Headshot">
+          </div>
+          <div class="player-info">
+            <h3>Boogie Fland</h3>
+            <table>
+              <tr><td>18</td></tr>
+              <tr><td>PG</td></tr>
+              <tr><td>Arkansas</td></tr>
+              <tr><td>6'2"</td></tr>
+            </table>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+</div><!-- End of draft screen -->
+
+
 
 <div class="content" id="contacts">
   <h1 id="screen-title">Around the Community</h1>
@@ -364,7 +486,7 @@
   <script src="games-mobile.js"></script>
   <script src="landing.js"></script>
   <script src="stats.js"></script>
-
+  <script src="draft.js"></script>
 
 </body>
 </html>
