updated file structure

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Detroit Pistons Fan Page</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="responsive.css">
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/responsive.css">
 </head>
 
 <div id="landing">
@@ -475,18 +475,18 @@
 
 </main>
 
-  <script src="scroll.js"></script>
-  <script src="detect-scroll.js"></script>
-  <script src="script.js"></script>
-  <script src="fixtures.js"></script>
-  <!-- <script src="last-year-stats.js"></script> -->
-  <script src="standings.js"></script>
-  <script src="menu.js"></script>
-  <script src="player-swipe.js"></script>
-  <script src="games-mobile.js"></script>
-  <script src="landing.js"></script>
-  <script src="stats.js"></script>
-  <script src="draft.js"></script>
+  <script src="scripts/scroll.js"></script>
+  <script src="scripts/detect-scroll.js"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/fixtures.js"></script>
+  <!-- <script src="scripts/last-year-stats.js"></script> -->
+  <script src="scripts/standings.js"></script>
+  <script src="scripts/menu.js"></script>
+  <script src="scripts/player-swipe.js"></script>
+  <script src="scripts/games-mobile.js"></script>
+  <script src="scripts/landing.js"></script>
+  <script src="scripts/stats.js"></script>
+  <script src="scripts/draft.js"></script>
 
 </body>
 </html>
