--- a/index.html
+++ b/index.html
@@ -477,16 +477,16 @@
 
   <script src="scripts/scroll.js"></script>
   <script src="scripts/detect-scroll.js"></script>
-  <script src="scripts/script.js"></script>
+  <script type="module" src="scripts/script.js"></script>
   <script src="scripts/fixtures.js"></script>
   <!-- <script src="scripts/last-year-stats.js"></script> -->
-  <script src="scripts/standings.js"></script>
+  <script type="module" src="scripts/standings.js"></script>
   <script src="scripts/menu.js"></script>
   <script src="scripts/player-swipe.js"></script>
-  <script src="scripts/games-mobile.js"></script>
+  <script type="module" src="scripts/games-mobile.js"></script>
   <script src="scripts/landing.js"></script>
   <script src="scripts/stats.js"></script>
-  <script src="scripts/draft.js"></script>
+  <script type="module" src="scripts/draft.js"></script>
 
 </body>
 </html>
